--- a/content/resources/mit14_384f13_lec26.md
+++ b/content/resources/mit14_384f13_lec26.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding lecture 26.
 file: /courses/14-384-time-series-analysis-fall-2013/ceac3edf7016aaad5ac6dd2889244fee_MIT14_384F13_lec26.pdf
 file_size: 181424
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
