--- a/content/resources/14-384f13-th.md
+++ b/content/resources/14-384f13-th.md
@@ -5,11 +5,12 @@ description: Time series of several AR(p) processes with standard deviation of t
 file: /courses/14-384-time-series-analysis-fall-2013/3619faf17cd22e92b5d6ba0ed7170f6d_14-384f13-th.jpg
 file_size: 12936
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Several examples of time series, collections of data points,\_measured\
     \ at successive points in time spaced at uniform time intervals.\_(Image courtesy\
-    \ of {{% resource_link \"d43e4a36-a7af-4a46-81fd-d1b023069f23\" \"Tomaschwutz\"\
-    \ %}}. CC BY.)"
+    \ of [Tomaschwutz](https://en.wikipedia.org/wiki/File:ArTimeSeries.svg). CC BY.)"
   credit: Image courtesy of Tomaschwutz. CC BY.
   image-alt: Five brightly colored graphs stacked on top of each other. Each shows
     a time series process.
