--- a/content/resources/mit14_384f13_lec1.md
+++ b/content/resources/mit14_384f13_lec1.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding lecture 1.
 file: /courses/14-384-time-series-analysis-fall-2013/4f2256b0a9c3157a2676806ed261eb8f_MIT14_384F13_lec1.pdf
 file_size: 172499
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
