--- a/content/resources/mit14_384f13_lec10.md
+++ b/content/resources/mit14_384f13_lec10.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding lecture 10.
 file: /courses/14-384-time-series-analysis-fall-2013/c513d2c0f8b1949efacd64e27df0fe07_MIT14_384F13_lec10.pdf
 file_size: 154201
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
