--- a/content/resources/mit14_384f13_lec11.md
+++ b/content/resources/mit14_384f13_lec11.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding lecture 11.
 file: /courses/14-384-time-series-analysis-fall-2013/a0f9daa509414e993f12a9a070c83449_MIT14_384F13_lec11.pdf
 file_size: 146195
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
