--- a/content/resources/mit14_384f13_lec19.md
+++ b/content/resources/mit14_384f13_lec19.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding lecture 19.
 file: /courses/14-384-time-series-analysis-fall-2013/12be198d6b5281bbba7b022fd15cfa46_MIT14_384F13_lec19.pdf
 file_size: 172678
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
