--- a/content/resources/mit14_384f13_lec20.md
+++ b/content/resources/mit14_384f13_lec20.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding lecture 20.
 file: /courses/14-384-time-series-analysis-fall-2013/4c0d665d324c565fb9b6d258538cb78e_MIT14_384F13_lec20.pdf
 file_size: 198378
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
