--- a/content/resources/mit14_384f13_rec4.md
+++ b/content/resources/mit14_384f13_rec4.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding recitation 4.
 file: /courses/14-384-time-series-analysis-fall-2013/b315133a6590761bd5c69b0ad36fefb6_MIT14_384F13_rec4.pdf
 file_size: 248255
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Recitations
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
