--- a/content/resources/mit14_384f13_rec5.md
+++ b/content/resources/mit14_384f13_rec5.md
@@ -4,6 +4,8 @@ description: This resource file contains information regarding recitation 5.
 file: /courses/14-384-time-series-analysis-fall-2013/1af8ce2bbbb793e313ddb06f3bed048f_MIT14_384F13_rec5.pdf
 file_size: 195736
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Recitations
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
